// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForwardValue cannot be extended 1`] = `
"snippetCode.ts (4,13): 'MyForwardValue' is declared but never used.

      2 |       import { ForwardValue } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyForwardValue extends ForwardValue {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`ForwardValue cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyForwardValue' incorrectly implements interface 'ForwardValue'.
  Type 'MyForwardValue' is missing the following properties from type 'ForwardValue': asString, asStringNullable, asNumber, asNumberNullable, and 14 more.

      2 |       import { ForwardValue } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyForwardValue implements ForwardValue {
        |             ^
      5 |       }
      6 |     
"
`;
